--- a/deps.yaml
+++ b/deps.yaml
@@ -3,25 +3,40 @@
   Version: '1.5'
 - Package: sp
   Repository: CRAN
-  Version: 1.3-1
-- Package: gstat
-  Repository: CRAN
-  Version: 2.0-2
+  Version: 1.4-1
 - Package: deldir
   Repository: CRAN
-  Version: 0.1-21
+  Version: 0.1-25
 - Package: rgeos
   Repository: CRAN
-  Version: 0.4-3
+  Version: 0.5-3
+- Package: gstat
+  Repository: CRAN
+  Version: 2.0-5
+- Package: raster
+  Repository: CRAN
+  Version: 3.1-5
 - Package: inlmisc
   Repository: CRAN
   Version: 0.4.9
-- Package: rgdal
+- Package: smoothr
   Repository: CRAN
-  Version: 1.4-4
+  Version: 0.1.2
 - Package: ggplot2
   Repository: CRAN
-  Version: 3.2.0
-- Package: raster
+  Version: 3.3.0
+- Package: rgdal
   Repository: CRAN
-  Version: 2.9-5
+  Version: 1.4-8
+- Package: automagic
+  Repository: CRAN
+  Version: 0.5.1
+- Package: spatstat
+  Repository: CRAN
+  Version: 1.63-3
+- Package: scales
+  Repository: CRAN
+  Version: 1.1.0
+- Package: knitr
+  Repository: CRAN
+  Version: '1.28'
